force-app/main/default/objects/Tracked_Component__c/Tracked_Component__c.object-meta.xml
<CustomObject>
    <description>Each Change Window can specify one or more Tracked Components. The scheduler uses these to filter which Audit Trail actions constitute a violation.</description>
    <label>Tracked Component</label>
    <nameField>
        <label>Tracked Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracked Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>