force-app/main/default/objects/Tracked_Component__c/fields/Audit_Trail_Section__c.field-meta.xml
<CustomField>
    <fullName>Audit_Trail_Section__c</fullName>
    <label>Audit Trail Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Classes</fullName>
            </value>
            <value>
                <fullName>Flows</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>