force-app/main/default/objects/Tracked_Component__c/fields/Change_Window__c.field-meta.xml
<CustomField>
    <fullName>Change_Window__c</fullName>
    <description>One change window can have many components like &apos;Apex Classes&apos;, &apos;Profiles&apos;, &apos;Flows&apos;.</description>
    <label>Change Window</label>
    <referenceTo>Deployment_Window__c</referenceTo>
    <relationshipLabel>Tracked Components</relationshipLabel>
    <relationshipName>Tracked_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>