force-app/main/default/objects/Tracked_Component__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Notes on why this component is monitored</description>
    <inlineHelpText>Notes on why this component is monitored</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>