force-app/main/default/objects/Tracked_Component__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows soft-disable of a component without deleting.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>